Revision history for Metabase-Fact

{{$NEXT}}

0.008     2010-03-23 18:54:21 EST5EDT

  - Fixed failing tests on 5.6.1 due to problems in overloaded
    stringification of Metabase::Resource [Ricardo Signes, Apocalypse]

  - Converted to Dist::Zilla for release management

  - Changed to the Apache License, version 2.0; (it's clearer, relicensable,
    and is explicit about contributions)

0.007 Fri Mar 19 07:51:07 EDT 2010

  - Remove dependency on Time::Piece

0.006 Mon Mar 15 02:25:46 EDT 2010

  - Fix bug in Metabase::Resource::cpan::distfile that prevents
    compatibility on Perl before 5.10

0.005 Sun Mar 14 19:20:05 EDT 2010

  - Remove Encode as a dependency and use utf8::encode/decode instead
    [suggested by Ricardo Signes]

0.004 Sun Mar 14 09:44:02 EDT 2010

  - Downgrade numerous prereqs

0.003002 Thu Mar 11 18:47:54 EST 2010

  - Worked around testing bug on bleadperl involving Test::Exception
    and throws_ok

  - Fixed docs for Metabase::Resource methods

0.003001

  - fixed bug in guid creation and testing

0.003 
  - heavily revised for CPAN Testers 2.0 effort
  - Added Metabase::Resouce classes and subclasses
  - Revised Metabase::User::Profile and Secret
    
0.002 (never released)
  - private development version, never released to CPAN

0.001 2009-06-24
  - "YAPC::NA::2009, Pittsburgh" Release